--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arch-nemesis",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "ES6 fork of Arch (React UI framework)",
   "main": "lib/index.js",
   "scripts": {
@@ -30,6 +30,7 @@
     "find": "^0.2.2",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
+    "gulp-bump": "^0.3.1",
     "gulp-eslint": "^0.12.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-mocha": "^2.0.1",
