--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "./node_modules/.bin/gulp test"
+    "test": "node --harmony ./node_modules/.bin/gulp test"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   "devDependencies": {
     "babel": "^5.8.21",
     "babel-eslint": "^4.0.10",
+    "babel-runtime": "^5.8.20",
     "chai": "^3.2.0",
     "eslint": "^1.2.1",
     "find": "^0.2.3",
@@ -37,6 +38,6 @@
     "gulp-util": "^3.0.6"
   },
   "dependencies": {
-    "ancient-oak": "^0.3.4"
+    "koa": "^1.0.0"
   }
 }
