--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "gulp-eslint": "^1.0.0",
     "gulp-load-plugins": "^1.0.0-rc",
     "gulp-mocha": "^2.1.3",
-    "gulp-util": "^3.0.6"
+    "gulp-util": "^3.0.6",
+    "sinon": "^1.16.1"
   },
   "dependencies": {
-    "koa": "^1.0.0"
+    "koa": "^1.0.0",
+    "react": "^0.14.0-beta1"
   }
 }
