--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.1",
     "gulp-bump": "^0.3.1",
+    "gulp-cached": "^1.1.0",
     "gulp-eslint": "^1.0.0",
     "gulp-load-plugins": "^1.0.0-rc",
     "gulp-mocha": "^2.1.3",
