--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   },
   "dependencies": {
     "koa": "^1.0.0",
-    "react": "^0.14.0-beta1"
+    "koa-router": "^5.2.3",
+    "react": "^0.14.0-beta1",
+    "react-dom": "^0.14.0-rc1"
   }
 }
