--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "esdoc": "^0.3.1",
     "esdoc-es7-plugin": "0.0.2",
     "eslint": "^1.2.1",
+    "eslint-config-defaults": "^7.0.1",
+    "eslint-plugin-react": "^3.5.1",
     "find": "^0.2.3",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.1",
@@ -46,7 +48,7 @@
   },
   "dependencies": {
     "koa": "^1.0.0",
-    "koa-router": "^5.2.3",
+    "path-to-regexp": "^1.2.1",
     "react": "^0.14.0-beta1",
     "react-dom": "^0.14.0-rc1"
   }
