--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "path-to-regexp": "^1.2.1",
     "react": "^0.14.0-beta1",
     "react-dom": "^0.14.0-rc1"
+  },
+  "engines": {
+    "node": ">= 4.0.0"
   }
 }
