--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
   "dependencies": {
     "koa": "^1.0.0",
     "path-to-regexp": "^1.2.1",
-    "react": "^0.14.0-beta1",
-    "react-dom": "^0.14.0-rc1"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   },
   "engines": {
     "node": ">= 4.0.0"
