--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arch-next",
-  "version": "0.0.1a",
+  "version": "0.0.1-b",
   "description": "Arch with some bitters and rye.",
   "main": "lib/shared/index.js",
   "scripts": {
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "http://github.com/arch-js/arch-next"
+    "url": "http://github.com/arch-js/next"
   },
   "keywords": [
     "arch",
@@ -28,9 +28,9 @@
   "author": "Tiago Azevedo",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/arch-js/arch-next/issues"
+    "url": "https://github.com/arch-js/next/issues"
   },
-  "homepage": "https://github.com/arch-js/arch-next",
+  "homepage": "https://github.com/arch-js/next",
   "devDependencies": {
     "babel": "^5.8.21",
     "babel-eslint": "^4.0.10",
