--- a/package.json
+++ b/package.json
@@ -49,10 +49,13 @@
     "gulp-eslint": "^1.0.0",
     "gulp-load-plugins": "^1.0.0-rc",
     "gulp-mocha": "^2.1.3",
+    "gulp-plumber": "^1.0.1",
     "gulp-util": "^3.0.6",
-    "sinon": "^1.16.1"
+    "sinon": "^1.16.1",
+    "supertest": "^1.1.0"
   },
   "dependencies": {
+    "ent": "^2.2.0",
     "koa": "^1.0.0",
     "path-to-regexp": "^1.2.1",
     "react": "^0.14.0",
