--- a/package.json
+++ b/package.json
@@ -32,23 +32,26 @@
   },
   "homepage": "https://github.com/arch-js/next",
   "devDependencies": {
-    "babel": "^5.8.21",
-    "babel-eslint": "^4.0.10",
-    "babel-runtime": "^5.8.20",
+    "babel-core": "^6.2.1",
+    "babel-eslint": "^4.1.5",
+    "babel-polyfill": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
     "chai": "^3.2.0",
-    "esdoc": "^0.3.1",
-    "esdoc-es7-plugin": "0.0.2",
+    "esdoc": "^0.4.3",
+    "esdoc-es7-plugin": "0.0.3",
     "eslint": "^1.2.1",
     "eslint-config-defaults": "^7.0.1",
     "eslint-plugin-react": "^3.5.1",
     "find": "^0.2.3",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.2.1",
-    "gulp-bump": "^0.3.1",
+    "gulp-babel": "^6.1.0",
+    "gulp-bump": "^1.0.0",
     "gulp-cached": "^1.1.0",
     "gulp-eslint": "^1.0.0",
     "gulp-load-plugins": "^1.0.0-rc",
-    "gulp-mocha": "^2.1.3",
+    "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-util": "^3.0.6",
     "sinon": "^1.16.1",
@@ -56,7 +59,7 @@
   },
   "dependencies": {
     "ent": "^2.2.0",
-    "koa": "^1.0.0",
+    "koa": "^2.0.0-alpha.3",
     "path-to-regexp": "^1.2.1",
     "react": "^0.14.0",
     "react-dom": "^0.14.0"
